--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://userName:password@cluster0.wukhoja.mongodb.net
 CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET = your_access_token_secret
+ACCESS_TOKEN_EXPIRY_DURATION = your_access_token_expiry_duration
+REFRESH_TOKEN_SECRET = your_refresh_token_secret
+REFREESH_TOKEN_EXPIRY_DURATION = your_refresh_token_expiry_duration
